# ManAuto

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  PROMPT_Planejamento_Manutencao_Excel.md  README.md  SPEC_Funcional.md  SPEC_Tecnica_Ambiente.md  agrovector_manutencao_v4.2_2026-06-16.html  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
Templates/: Diagnostico_AgroVector_Manutencao_F1F2_CoresFabio.xlsx  template_checklist.xlsx  template_estrutura_org.xlsx  template_frota.xlsx  template_historico_os.xlsx  template_pecas_insumos.xlsx  template_sazonalidade.xlsx
Templates_Vector/: Diagnostico_AgroVector_Manutencao_F1F2.xlsx  Parametrizacao_AgroVector_v4.2.xlsx  Planejamento_Manutencao_AgroVector_v4.2.xlsx  template_catalogo_itens.xlsx  template_gatilhos_preventiva.xlsx  template_pessoas.xlsx
apps/cadastro/: admin.py  apps.py  models.py  seeding.py  services.py  urls.py  views.py
apps/core/: admin.py  apps.py  models.py  urls.py  views.py
apps/importacao/: admin.py  apps.py  calibracao.py  common.py  models.py  parsing.py  tasks.py
apps/motor/: __init__.py  agenda.py  arredondamento.py  cronograma.py  heranca.py  horas.py  plano.py  proxima_preventiva.py  saving.py  semanas.py  tipos.py
apps/plano/: admin.py  apps.py  models.py  services.py  tasks.py  urls.py  views.py
config/: api_urls.py  urls.py
referencias/: Planejamento_Manutencao_Petribu_v1.3.xlsx  agrovector_manutencao_Petribu_v1.0_2026-07-06.html
templates/: base.html
(+63 files in other folders)
