[project]
name = "agrovector-manutencao"
version = "0.1.0"
description = "AgroVector Manutencao - planejamento de manutencao para agronegocio (Vector Consulting)"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "django>=6.0,<7.0",
    "djangorestframework>=3.15",
    "procrastinate[django]>=2.9",
    "psycopg[binary]>=3.1",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "pandas>=2.2",
    "django-simple-history>=3.5",
    "django-htmx>=1.17",
    "whitenoise>=6.6",
    "gunicorn>=22.0",
    "argon2-cffi>=23.1",
]

[dependency-groups]
# pytest travado em <9.0: pytest-django 4.12 quebra com pytest 9.x em testes
# com @pytest.mark.django_db ("assert not self._finalizers" no teardown de
# fixture) — revisitar quando pytest-django lançar suporte oficial.
dev = [
    "pytest>=8.0,<9.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
]

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
testpaths = ["apps"]
addopts = "--reuse-db"

[tool.coverage.run]
source = ["apps/motor"]
branch = true
omit = ["apps/motor/tests/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true